--- a/manifest.json
+++ b/manifest.json
@@ -2,30 +2,30 @@
   "background_color": "#ffffff",
   "display": "standalone",
   "lang": "en",
-  "name": "ocrProject",
-  "short_name": "ocrProject",
+  "name": "ocrDemo",
+  "short_name": "ocrDemo",
   "start_url": "/?utm_source=web_app_manifest",
   "orientation": "portrait",
   "related_applications": [
     {
       "platform": "itunes",
-      "id": "com.hokminglee0803.ocrProject"
+      "id": "com.hokminglee0803.ocrDemo"
     }
   ],
   "prefer_related_applications": true,
   "icons": [
     {
-      "src": "\\hokminglee0803\\ocrProject\\pwa\\chrome-icon\\chrome-icon-144.png",
+      "src": "\\hokminglee0803\\ocrDemo\\pwa\\chrome-icon\\chrome-icon-144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "\\hokminglee0803\\ocrProject\\pwa\\chrome-icon\\chrome-icon-192.png",
+      "src": "\\hokminglee0803\\ocrDemo\\pwa\\chrome-icon\\chrome-icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "\\hokminglee0803\\ocrProject\\pwa\\chrome-icon\\chrome-icon-512.png",
+      "src": "\\hokminglee0803\\ocrDemo\\pwa\\chrome-icon\\chrome-icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
