--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ocrProject",
-    "slug": "ocrProject",
+    "name": "ocrDemo",
+    "slug": "ocrDemo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -17,7 +17,7 @@
       "**/*"
     ],
     "ios": {
-      "bundleIdentifier": "com.hokminglee0803.ocrProject"
+      "bundleIdentifier": "com.hokminglee0803.ocrDemo"
     },
     "web": {
       "favicon": "./assets/favicon.png"
