--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "main": "node_modules/expo/AppEntry.js",
-  "homepage": "https://github.com/hokminglee0803/ocrProject",
+  "homepage": "https://github.com/hokminglee0803/ocrDemo",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "deploy": "gh-pages -d web-build",
-    "predeploy": "expo build:web"
+    "predeploy": "expo build:web",
+    "deploy": "gh-pages -d web-build"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -17,7 +17,9 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-image-picker": "~8.3.0",
+    "expo-file-system": "~9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
